--- a/phone_store/store/templates/header.html
+++ b/phone_store/store/templates/header.html
@@ -14,13 +14,13 @@
                     <div class="main-menu menu-lh-3 main-menu-padding-1 menu-text-black text-center">
                         <nav>
                             <ul>
-                                <li><a class="active" href="index.html">HOME</a>
+                                <li><a class="active" href="">HOME</a>
                                 </li>
-                                <li><a href="shop-fullwide.html">SHOP</a>
+                                <li><a href="">SHOP</a>
                                 </li>
-                                <li><a href="blog.html">BLOG</a>
+                                <li><a href="">BLOG</a>
                                 </li>
-                                <li><a href="contact.html">CONTACT</a></li>
+                                <li><a href="">CONTACT</a></li>
                             </ul>
                         </nav>
                     </div>
