--- a/phone_store/store/templates/header.html
+++ b/phone_store/store/templates/header.html
@@ -14,13 +14,26 @@
                     <div class="main-menu menu-lh-3 main-menu-padding-1 menu-text-black text-center">
                         <nav>
                             <ul>
-                                <li><a class="active" href="">HOME</a>
-                                </li>
-                                <li><a href="">SHOP</a>
-                                </li>
-                                <li><a href="">BLOG</a>
-                                </li>
+                                {% if chapter %}
+                                <li><a href="{% url 'home' %}">HOME</a>
+                                    {% else %}
+                                <li><a class="active" href="{% url 'home' %}">HOME</a></li>
+                                {% endif %}
+                                {% if chapter == 'shop' %}
+                                <li><a href="" class="active">SHOP</a></li>
+                                {% else %}
+                                <li><a href="{% url 'shop' %}?chapter=shop">SHOP</a></li>
+                                {% endif %}
+                                {% if chapter == 'blog' %}
+                                <li><a href="" class="active">BLOG</a></li>
+                                {% else %}
+                                <li><a href="">BLOG</a></li>
+                                {% endif %}
+                                {% if chapter == 'contact' %}
+                                <li><a href="" class="active">CONTACT</a></li>
+                                {% else %}
                                 <li><a href="">CONTACT</a></li>
+                                {% endif %}
                             </ul>
                         </nav>
                     </div>
