--- a/phone_store/store/templates/header.html
+++ b/phone_store/store/templates/header.html
@@ -22,7 +22,7 @@
                                 {% if chapter == 'shop' %}
                                 <li><a href="" class="active">SHOP</a></li>
                                 {% else %}
-                                <li><a href="{% url 'shop' %}?chapter=shop">SHOP</a></li>
+                                <li><a href="{% url 'shop' %}">SHOP</a></li>
                                 {% endif %}
                                 {% if chapter == 'blog' %}
                                 <li><a href="" class="active">BLOG</a></li>
