--- a/phone_store/store/templates/store/shop.html
+++ b/phone_store/store/templates/store/shop.html
@@ -93,3 +93,13 @@
     {% include 'footer.html' %}
 </div>
 {% endblock %}
+
+
+<div class="product-details-quality">
+    <div class="cart-plus-minus">
+        <input class="cart-plus-minus-box" type="text" name="qtybutton" value="2">
+    </div>
+</div>
+<div class="product-details-cart">
+    <a title="Add to cart" href="#">Add to cart</a>
+</div>
