--- a/phone_store/store/templates/base.html
+++ b/phone_store/store/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <link href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/images/favicon.png' %}">
 
     <link rel="stylesheet" href="{% static 'assets/css/vendor/bootstrap.min.css' %}">
