--- a/phone_store/store/templates/store/home.html
+++ b/phone_store/store/templates/store/home.html
@@ -50,7 +50,7 @@
                             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12">
                                 <div class="product-wrap mb-55">
                                     <div class="product-img mb-25">
-                                        <a href="">
+                                        <a href="{{product.get_absolute_url}}">
                                             <img src="{{product.image.url}}" alt="">
                                         </a>
                                         {% if product.new_product %}
