--- a/phone_store/store/templates/store/home.html
+++ b/phone_store/store/templates/store/home.html
@@ -60,7 +60,7 @@
                                         <span class="badge-theme-color badge-right-20 badge-top-20 badge-ptb-1">-{{product.discount}}%</span>
                                         {% endif %}
                                         <div class="product-action product-action-position-1">
-                                            <a title="Add to Cart" href="#">
+                                            <a title="Add to Cart" href="{% url 'cart_add' product.id product.slug %}">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                      fill="currentColor" class="bi bi-cart-plus" viewBox="0 0 16 16">
                                                     <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9z"/>
