--- a/phone_store/store/templates/store/cart.html
+++ b/phone_store/store/templates/store/cart.html
@@ -33,6 +33,7 @@
                                         </tr>
                                         </thead>
                                         <tbody>
+                                        {% for item in cart%}
                                         <tr>
                                             <td class="product-remove">
                                                 <a href="#"><i class=" ti-close "></i></a>
@@ -40,7 +41,7 @@
                                             <td class="product-img">
                                                 <a href="#"><img src="assets/images/cart/cart-1.jpg" alt=""></a>
                                             </td>
-                                            <td class="product-name"><a href="#">Heavy Duty [Military Grade] </a></td>
+                                            <td class="product-name"><a href="#">{{item.product}} </a></td>
                                             <td class="product-price"><span class="amount">$26.00</span></td>
                                             <td class="cart-quality">
                                                 <div class="product-details-quality quality-width-cart">
@@ -52,6 +53,7 @@
                                             </td>
                                             <td class="product-total"><span>$110.00</span></td>
                                         </tr>
+                                        {% endfor %}
                                         <tr>
                                             <td class="product-remove">
                                                 <a href="#"><i class=" ti-close "></i></a>
