--- a/phone_store/store/templates/store/cart.html
+++ b/phone_store/store/templates/store/cart.html
@@ -34,24 +34,31 @@
                                         </thead>
                                         <tbody>
                                         {% for item in cart%}
+                                        {{item}}
                                         <tr>
                                             <td class="product-remove">
-                                                <a href="#"><i class=" ti-close "></i></a>
+                                                <a href="{% url 'delete_product_cart' %}">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                         fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+                                                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                                                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                                                    </svg>
+                                                </a>
                                             </td>
                                             <td class="product-img">
                                                 <a href="#"><img src="assets/images/cart/cart-1.jpg" alt=""></a>
                                             </td>
-                                            <td class="product-name"><a href="#">{{item.product}} </a></td>
-                                            <td class="product-price"><span class="amount">$26.00</span></td>
+                                            <td class="product-name"><a href="#">{{item.name}} </a></td>
+                                            <td class="product-price"><span class="amount">₽{{item.price}}</span></td>
                                             <td class="cart-quality">
                                                 <div class="product-details-quality quality-width-cart">
                                                     <div class="cart-plus-minus">
                                                         <input class="cart-plus-minus-box" type="text" name="qtybutton"
-                                                               value="2">
+                                                               value="{{item.quantity}}">
                                                     </div>
                                                 </div>
                                             </td>
-                                            <td class="product-total"><span>$110.00</span></td>
+                                            <td class="product-total"><span>₽{{item.total_price}}</span></td>
                                         </tr>
                                         {% endfor %}
                                         <tr>
