--- a/phone_store/cart/templates/cart/cart.html
+++ b/phone_store/cart/templates/cart/cart.html
@@ -35,7 +35,7 @@
                                         </thead>
                                         <tbody>
                                         {% for item in cart%}
-                                        {{item}}
+                                        {{item}}a
                                         <tr>
                                             <td class="product-remove">
                                                 <a href="{% url 'delete_product_cart' item.id %}">
