product detail header content info ok

--- a/phone_store/store/templates/product_header_content.html
+++ b/phone_store/store/templates/product_header_content.html
@@ -146,16 +146,12 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 col-md-6 col-sm-5">
                         <div class="pro-dec-brand-img text-center">
-                            <img src="assets/images/brand-logo/brand-logo-7.png" alt="">
+                            <img src="{{product.manufacture.image.url}}" alt="">
                         </div>
                     </div>
                     <div class="col-lg-8 col-md-6 col-sm-7">
                         <div class="pro-dec-brand-content">
-                            <p>Donec accumsan auctor iaculis. Sed suscipit arcu ligula, at
-                                egestas magna molestie a. Proin ac ex maximus, ultrices
-                                justo eget, sodales orci. Aliquam egestas libero ac turpis
-                                pharetra, in vehicula lacus scelerisque. Vestibulum ut sem
-                                laoreet, feugiat tellus at, hendrerit arcu..</p>
+                            <p>{{product.manufacture.description}}</p>
                         </div>
                     </div>
                 </div>
