--- a/phone_store/cart/templates/cart/cart.html
+++ b/phone_store/cart/templates/cart/cart.html
@@ -81,7 +81,7 @@
                                 <div class="grand-total-wrap">
                                     <h4>Cart Totals</h4>
                                     <div class="grand-total-content">
-                                        <ul>
+                                        <ul>{{cart.cart}}
                                             <li>Subtotal <span> ₽{{cart.get_total_price}}</span></li>
                                             <li>Shipping
                                                 <ul>
